-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.2.7, 6.3.2, 6.4.1
-
None
-
-
7ef3bee4f (dev), b0541aa82 (6.5), 0e61fbf8d (6.5.0), ffddb966d (tqtc/lts-6.2)
While investigating some strange bug with Handlers in my own app I've found strange bug in Qt - using PinchHandler for Flickable's child makes the Flickable's transparent for touch events. As soon as I can see this is regression at some point after 6.2.4.
Code sample:
import QtQuick Window { width: 640 height: 480 visible: true TapHandler { onTapped: { color = Qt.rgba(Math.random(1), Math.random(1), Math.random(1), 1) } } Flickable { anchors.fill: parent contentWidth: content.width contentHeight: content.height Rectangle { id: content width: 200 height: 200 color: 'red' PinchHandler {} } } }
See video Screen Recording 2022-11-25 at 23.06.26.mov![]()
Steps to reproduce:
- Pinch red rectangle few times
- Click the left button several times, at some point all clicks will start to propagate to the underlying TapHandler (it changes the window's color when processing touches)
Reproduces at least on macOS with touchpad.
- is required for
-
QTBUG-108924
Revamp Photo surface example
-
- Closed
-
- relates to
-
QTBUG-107239 DragHandler propagates tap event through Flickable to underlying TapHandler
-
- Reported
-
-
QTBUG-94012 handlers in underlying or parent items should be able to avoid reacting when a higher-z or child item already handled it
-
- Closed
-
-
QTBUG-109655 Pinch gestures are broken in QML Photo Surface example
-
- Closed
-